--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,4 +96,4 @@ workflows:
           filters:
             branches:
               only:
-                - macos_fat
+                - circleci-editor/macos_fat
