--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
-        "condition_variable": "cpp"
+        "*.gpx": "xml",
+        "condition_variable": "cpp",
+        "future": "cpp"
     },
 
        "C_Cpp.default.includePath": [
